# vggt

./: .gitignore  README.md  ba.py  colmap_visualizer.py  demo.py  demo_colmap.py  demo_gradio.py  demo_viser.py  demo_viser_w_bbox.py  demo_viser_w_bbox_v2.py  loss.py  pyproject.toml  requirements_demo.txt  runner.py  tensor_to_pycolmap.py  test_co3d.py
annotation_3d_viser/: README.md  __init__.py  box_mapper.py  config.py  image_utils.py  main.py  object_detector.py  scene_aligner.py  scene_renderer.py  utils.py  visualizer.py
data/: base_dataset.py  composed_dataset.py
data/datasets/: co3d.py
dependency/: track_predict.py
evaluation/: README.md  ba.py  preprocess_co3d.py  test_co3d.py
training/: README.md  launch.py  loss.py  loss_dirty.py  trainer.py
training/config/: default.yaml  default_dataset.yaml
training/data/: dynamic_dataloader.py
training/data/datasets/: co3d.py
training/datasets/: augmentation.py  dataset_util.py
training/train_utils/: checkpoint.py  distributed.py  freeze.py  general.py  gradient_clip.py  logging.py  optimizer.py
vggt/: __init__.py
vggt/dependency/: distortion.py  np_to_pycolmap.py  projection.py  track_predict.py  vggsfm_tracker.py  vggsfm_utils.py
vggt/dependency/track_modules/: base_track_predictor.py  blocks.py  track_refine.py  utils.py
vggt/heads/: __init__.py  track_head.py
vggt/layers/: __init__.py
vggt/models/: __init__.py
vggt/utils/: __init__.py  distortion.py  geometry.py  helper.py  load_fn.py
